k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app
spec:
  type: ClusterIP
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
